--- a/src/styles/SwitchThemeButton.module.css
+++ b/src/styles/SwitchThemeButton.module.css
@@ -15,6 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: 0.3s ease;
 }
 
 .switchThemeButtonLight {
@@ -23,4 +24,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #eeeeee;
+  transition: 0.3s ease;
 }
