--- a/src/styles/StatBar.module.css
+++ b/src/styles/StatBar.module.css
@@ -3,10 +3,18 @@
   align-items: center;
 }
 
-.bar {
+.barDark {
   width: 100%;
   height: 12px;
   background-color: #1a1a1a;
+  border-radius: 8px;
+  margin: 0 1.2rem;
+}
+
+.barLight {
+  width: 100%;
+  height: 12px;
+  background-color: #eeeeee;
   border-radius: 8px;
   margin: 0 1.2rem;
 }
