--- a/src/styles/TextEditor.module.css
+++ b/src/styles/TextEditor.module.css
@@ -1,4 +1,4 @@
-.mainTextInput {
+.mainTextInputDark {
   resize: none;
   width: calc(100% - 1.6em);
   height: 200px;
@@ -11,4 +11,23 @@
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: text;
+}
+
+.mainTextInputLight {
+  resize: none;
+  width: calc(100% - 1.6em);
+  height: 200px;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.8em 0.8em;
+  margin: 1em 0;
+  font-size: 1em;
+  font-weight: 400;
+  font-family: inherit;
+  background-color: #eeeeee;
+  cursor: text;
+}
+
+.mainTextInputLight::placeholder {
+  color: #a1a1a1;
 }
