--- a/src/styles/TickOption.module.css
+++ b/src/styles/TickOption.module.css
@@ -1,7 +1,51 @@
-.tickOptionContainer input {
+.tickOptionContainerDark input {
   margin: 0 0.5rem 0 0;
 }
 
-.tickOptionContainer {
+.tickOptionContainerDark {
   padding: 0.2rem 0;
+}
+
+.tickOptionContainerLight input {
+  margin: 0 0.5rem 0 0;
+  background-color: #eeeeee;
+}
+
+.tickOptionContainerLight {
+  padding: 0.2rem 0;
+}
+
+.tickOptionContainerLight input[type="checkbox"]:checked {
+  background: rgb(10, 100, 255);
+  color: white;
+}
+
+.tickOptionContainerLight input[type="checkbox"] {
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: 0;
+  background: lightgray;
+  height: 16px;
+  width: 16px;
+  border: 1px solid white;
+  color: white;
+}
+
+.tickOptionContainerLight input[type="checkbox"]:after {
+  content: " ";
+  position: relative;
+  left: 40%;
+  top: 20%;
+  width: 15%;
+  height: 40%;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  transform: rotate(50deg);
+  display: none;
+}
+
+.tickOptionContainerLight input[type="checkbox"]:checked:after {
+  display: block;
 }
