--- a/src/styles/StatBar.module.css
+++ b/src/styles/StatBar.module.css
@@ -18,3 +18,15 @@
   border-radius: 8px;
   margin: 0 1.2rem;
 }
+
+.barProgressDark {
+  background-color: dodgerblue;
+  border-radius: 8px;
+  height: 100%;
+}
+
+.barProgressLight {
+  background-color: dodgerblue;
+  border-radius: 8px;
+  height: 100%;
+}
